# snakeoil

./: CMakeLists.txt  README.md
src/: conscolor.h  fileiter.h  snakeoil.cpp
